Alignment issue fix

--- a/src/components/parts/forms/secureLoanForm/style.module.scss
+++ b/src/components/parts/forms/secureLoanForm/style.module.scss
@@ -42,7 +42,7 @@
         select {
           width: 100%;
           border-radius: 4px;
-          background: #f7f8fb;
+          // background: #f7f8fb;
           border: none;
           &:focus {
             outline: none;
